# ai_mini_projects

./: .gitignore  LICENSE  README.md  pyproject.toml
day_3_brochure_using_ai/: README.md  brochure_ai.py
day_4_frontier_models_apis/: README.md  frontier_model_apis.py
day_5_adversarial_conversation/: README.md  adversarial_conversation.py
day_6_gradio_ui/: README.md  gradio_ui.py
day_7_brochure_gradio_ui/: README.md  brochure_gradio_ui.py
day_8_gradio_chat_ui/: README.md  gradio_chat_ui.py
day_9_airline_ai_assistant/: README.md  airline_ai_assistant.py
ollama_using_requests/: README.md  ollama_requests.py
ollama_website_summarizer/: README.md  ollama_webiste_summarizer.py
