[project]
name = "mini-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.57.1",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "google-genai>=1.26.0",
    "gradio>=5.38.2",
    "ollama>=0.5.1",
    "openai>=1.97.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
]
